clusters/default/apps/bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: applications
  labels:
    app: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
      - name: bookstack
        image: linuxserver/bookstack:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: bookstack-data
          mountPath: /config
      volumes:
      - name: bookstack-data
        persistentVolumeClaim:
          claimName: bookstack-pvc
