clusters/default/apps/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: applications
spec:
  selector:
    app: bookstack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31580
  type: NodePort
