clusters/default/apps/bookstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack-ingress
  namespace: applications
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: bookstack.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 80
